--- a/src/app/components/shared/modal/modal.component.css
+++ b/src/app/components/shared/modal/modal.component.css
@@ -1,5 +1,5 @@
 #btn-modal-update,
-#btn-modal-delete {
+input[type="checkbox"] {
   display: none;
 }
 /* input[type="checkbox"][id^='btn-']{
@@ -19,7 +19,7 @@
   z-index: 100;
 }
 #btn-modal-update:checked ~ .container-modal,
-#btn-modal-delete:checked ~ .container-modal {
+input[type="checkbox"]:checked ~ .container-modal {
   display: flex;
 }
 
