--- a/src/app/pages/ver-usuarios/ver-usuarios.component.html
+++ b/src/app/pages/ver-usuarios/ver-usuarios.component.html
@@ -1,7 +1,8 @@
 <app-exito [msg]="msgExito()" *ngIf="msgExito().length > 0" />
 <!-- <app-exito [msg]="msgQR" *ngIf="existeMsgQRExito"></app-exito> -->
 
-<app-errores-backend [mensaje]="msgQR" *ngIf="existeQRregistrado" />
+
+
 <div class="spinner-container" *ngIf="usuarios().length == 0  ">
     <app-spinner />
 </div>
@@ -53,7 +54,8 @@
                     <label class="btn" for="btn-modal-delete" (click)="referenciaUsuarioEliminar(usuario)"><i
                             class="fa-solid fa-user-xmark fa-lg"></i></label>
 
-                    <button class="btn" (click)="enviarQR(usuario.id)"><i class="fa-solid fa-qrcode fa-lg"></i></button>
+                    <button class="btn" (click)="enviarQR(usuario.id)" *ngIf="!usuario.qr"><i
+                            class="fa-solid fa-qrcode fa-lg"></i></button>
                     } @else {
                     <label for="btn-modal-delete-def" (click)="referenciaUsuarioEliminar(usuario)">
 
