--- a/src/app/pages/ver-usuarios/ver-usuarios.component.html
+++ b/src/app/pages/ver-usuarios/ver-usuarios.component.html
@@ -13,7 +13,7 @@
 
 
 
-<app-buscador (refresh)="refetchUsuarios('')" />
+<app-buscador (refresh)="refetchUsuarios('')" (search)="search($event)" />
 
 <!----------contenedor de las tablas-------------
     <section class="recent">
