adding forgot password module

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -54,7 +54,7 @@
                 </button>
             </div>
             <p>
-                <a routerLink="/forget-password">¿Olvidaste tu contraseña?</a>
+                <a routerLink="/forget-password" style="cursor: pointer;">¿Olvidaste tu contraseña?</a>
             </p>
 
         </form>
