--- a/src/app/pages/registro-usuario/registro-usuario.component.html
+++ b/src/app/pages/registro-usuario/registro-usuario.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="errorServidor().length > 0">
     <div class="mensajes-container">
 
-        <app-errores-backend [mensaje]="error.msg" *ngFor="let error of errores"></app-errores-backend>
-        <app-errores-backend [mensaje]="errorServidor()" *ngIf="errorServidor().length > 0"></app-errores-backend>
+        <!-- <app-errores-backend [mensaje]="error.msg" *ngFor="let error of errores"></app-errores-backend> -->
+        <app-errores-backend [mensaje]="errorServidor()"></app-errores-backend>
     </div>
 
 
@@ -15,53 +15,21 @@
     <div class="container">
         <div class="title">Formulario de Registro de Usuarios</div>
         <form [formGroup]="form" (ngSubmit)="submit()">
+
             <div class="user-details">
+                <app-text error="El campo es requerido" fieldName="nombre" [form]="form" label="Nombre"
+                    (removeAlerts)="this.removerAlertas()" />
 
-                <div class="group">
-                    <input type="text" formControlName="nombre" (keyup)="removerAlertas()">
-                    <span class="highlight"></span>
-                    <span class="bar"></span>
-                    <label>Nombre</label>
-                    <app-errores-frontend *ngIf="campoValido('nombre')"
-                        mensaje="El campo es requerido"></app-errores-frontend>
-                </div>
+                <app-text error="Tiene que ser un rfc valido" fieldName="rfc" [form]="form" label="RFC"
+                    (removeAlerts)="this.removerAlertas()" />
 
-                <div class="group">
-                    <input type="text" formControlName="rfc" (keyup)="removerAlertas()">
-                    <span class="highlight"></span>
-                    <span class="bar"></span>
-                    <label>RFC</label>
-                    <app-errores-frontend *ngIf="campoValido('rfc')"
-                        mensaje="Tiene que ser un rfc valido"></app-errores-frontend>
-                </div>
+                <app-text error="El campo es requerido" fieldName="direccion" [form]="form" label="Dirección"
+                    (removeAlerts)="this.removerAlertas()" />
 
-                <div class="group">
-                    <input type="text" formControlName="direccion" (keyup)="removerAlertas()">
-                    <span class="highlight"></span>
-                    <span class="bar"></span>
-                    <label>Direccion</label>
-                    <app-errores-frontend *ngIf="campoValido('direccion')"
-                        mensaje="El campo es requerido"></app-errores-frontend>
-                </div>
-
-                <div class="group">
-                    <input type="tel" formControlName="telefono" (keyup)="removerAlertas()">
-                    <span class="highlight"></span>
-                    <span class="bar"></span>
-                    <label>Telefono</label>
-                    <app-errores-frontend *ngIf="campoValido('telefono')"
-                        mensaje="Tiene que ser un numero telefonico valido"></app-errores-frontend>
-                </div>
-
-                <div class="group">
-                    <input type="email" formControlName="email" (keyup)="removerAlertas()">
-                    <span class="highlight"></span>
-                    <span class="bar"></span>
-                    <label>Email</label>
-                    <app-errores-frontend *ngIf="campoValido('email')"
-                        mensaje="Tiene que ser un correo valido"></app-errores-frontend>
-                </div>
-
+                <app-text error="Tiene que ser un numero telefonico valido" fieldName="telefono" [form]="form"
+                    label="Telefono" (removeAlerts)="this.removerAlertas()" />
+                <app-text type="email" error="Tiene que ser un correo valido" fieldName="email" [form]="form"
+                    label="Email" (removeAlerts)="this.removerAlertas()" />
             </div>
             <div class="wrapper">
                 <button href="#0" class="btn10">
