bug fixed on showing images

--- a/src/app/pages/cambio-contrasena/cambio-contrasena.component.html
+++ b/src/app/pages/cambio-contrasena/cambio-contrasena.component.html
@@ -4,7 +4,7 @@
 
 <div class="activity-grid">
     <div class="container">
-        <img src="assets/img/logo.svg">
+        <img src="/assets/img/logo.svg">
         <p>Cambiar la contraseña de</p>
         <p>{{nombreUsuario()}}</p>
         <form [formGroup]="form" (ngSubmit)="submit()">
