--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,10 +20,10 @@
 </div>
 
 
-<img class="wave" src="assets/img/wave2.png">
+<img class="wave" src="/assets/img/wave2.png">
 <div class="form-img">
     <div class="content-form">
-        <img src="assets/img/logo.svg">
+        <img src="/assets/img/logo.svg">
         <h1>¡Bienvenido!</h1>
         <form [formGroup]="form" (ngSubmit)="login()">
 
@@ -47,7 +47,7 @@
         </form>
     </div>
     <div class="login-imagen">
-        <img src="assets/img/undraw_mobile_interface_wakp.svg" alt="User">
+        <img src="/assets/img/undraw_mobile_interface_wakp.svg" alt="User">
     </div>
 
 
