--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -3,7 +3,7 @@
 <app-errores-backend [mensaje]="msgError" *ngIf="existeError"></app-errores-backend>
 
 <section class="email">
-    <img src="assets/img/logo.svg">
+    <img src="/assets/img/logo.svg">
     <p>Cambiar la contraseña </p>
     <!-- <p>@Koso</p>  -->
     <form [formGroup]="form" (ngSubmit)="submit()">
