--- a/src/app/components/shared/panel-admin/panel-admin.component.html
+++ b/src/app/components/shared/panel-admin/panel-admin.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="nav__list">
                 <div class="profile">
-                    <img src="assets/img/logo.svg" alt="">
+                    <img src="/assets/img/logo.svg" alt="">
                 </div>
 
 
