--- a/src/app/pages/registro-rol/registro-rol.component.html
+++ b/src/app/pages/registro-rol/registro-rol.component.html
@@ -20,15 +20,9 @@
                     (removeAlerts)="this.removerAlertas()" />
 
 
+                <app-textarea error="campo requerido" fieldName="description" [form]="form" />
 
-                <div class="group">
-                    <textarea formControlName="description" (keyup)="removerAlertas()"
-                        placeholder="Descripción..."> </textarea>
-                    <span class="highlight"></span>
-                    <span class="bar"></span>
-                    <app-errores-frontend mensaje="Campo requerido"
-                        *ngIf="campoValido('description')"></app-errores-frontend>
-                </div>
+
 
             </div>
             <div class="wrapper">
