--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -8,23 +8,14 @@
     <!-- <p>@Koso</p>  -->
     <form [formGroup]="form" (ngSubmit)="submit()">
 
-        <div class="group">
-            <input type="password" formControlName="new_password">
-            <span class="highlight"></span>
-            <span class="bar"></span>
-            <label>Nueva Contraseña</label>
-            <app-errores-frontend *ngIf="campoValido('new_password')"
-                mensaje="La contraseña debe tener al entre 8 y 16 caracteres, al menos un dígito, al menos una minúscula, al menos una mayúscula y al menos un caracter no alfanumérico"></app-errores-frontend>
-        </div>
-        <div class="group">
-            <input type="password" formControlName="new_password_confirmation">
-            <span class="highlight"></span>
-            <span class="bar"></span>
-            <label>Confirma Nueva Contraseña </label>
-            <app-errores-frontend *ngIf="campoValido('new_password_confirmation')"
-                mensaje="Las  nuevas contraseñas no coinciden"></app-errores-frontend>
 
-        </div>
+        <app-text error="La contraseña es obligatoria" fieldName="new_password" [form]="form" label="Nueva contraseña"
+            type="password" />
+
+        <app-text error="Las  nuevas contraseñas no coinciden" fieldName="new_password_confirmation" [form]="form"
+            label="Confirma Nueva contraseña" type="password" />
+
+
 
         <div class="wrapper">
             <button href="#0" class="btn10">
